--- a/index.html
+++ b/index.html
@@ -58,15 +58,13 @@ body {font-size:16px;}
   <!-- Photo grid (modal) -->
   <div class="w3-row-padding">
     <div class="w3-half">
-      <img src="./vimbs_plumbing/src/iec.jpeg" style="width:100%" onclick="onClick(this)" alt="Concrete meets bricks">
-      <img src="./vimbs_plumbing/src/livingroom.jpg" style="width:100%" onclick="onClick(this)" alt="Light, white and tight scandinavian design">
-      <img src="./vimbs_plumbing/src/diningroom.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs">
+      <img src="./src/company_profile.png" style="width:200%" onclick="onClick(this)" alt="Concrete meets bricks">
     </div>
 
     <div class="w3-half">
-      <img src="./src/atrium.jpg" style="width:100%" onclick="onClick(this)" alt="Windows for the atrium">
+      <!-- <img src="./src/atrium.jpg" style="width:100%" onclick="onClick(this)" alt="Windows for the atrium">
       <img src="./src/bedroom.jpg" style="width:100%" onclick="onClick(this)" alt="Bedroom and office in one space">
-      <img src="./src/livingroom2.jpg" style="width:100%" onclick="onClick(this)" alt="Scandinavian design">
+      <img src="./src/livingroom2.jpg" style="width:100%" onclick="onClick(this)" alt="Scandinavian design"> -->
     </div>
   </div>
 
